--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-three-fiber": "^6.0.13",
+    "react-use": "^17.4.0",
     "three": "^0.149.0",
     "typescript": "^4.9.5",
     "use-cannon": "^0.5.3",
