--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@vitejs/plugin-react": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-use": "^17.4.0",
     "three": "^0.149.0",
     "typescript": "^4.9.5",
     "use-cannon": "^0.5.3",
