--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-use": "^17.4.0",
     "three": "^0.149.0",
+    "three-stdlib": "^2.28.0",
     "typescript": "^4.9.5",
     "use-cannon": "^0.5.3",
     "vite": "^4.4.11",
